# QA-Agent

./: .env.example  .gitignore  CLAUDE.md  PRODUCT_CONTEXT.md  Prompt for the QA Agent.txt  README.md  config.py  main.py  pyproject.toml  requirements.txt  runtime.py
.github/workflows/: aria-qa.yml  aria.yml  qa-pipeline.yml
api/: router.py
aria/: .env.example  .gitignore  Prompt for the QA Agent.txt  README.md  clickup.py  config.py  context.py  diff.py  discord.py  evaluate.py  llm.py  main.py  requirements.txt  run_ci_pipeline.py  runner.py  testgen.py
aria/.github/workflows/: aria.yml
aria/claude/: analyzer.py  client.py  evaluator.py  prompts.py  report_writer.py  test_generator.py
aria/integrations/: clickup.py  discord.py
aria/storage/: models.py  mongo.py
aria/testing/: regression_watcher.py  result_parser.py  runner.py
aria/utils/: logger.py
aria/webhook/: router.py  validator.py
claude/: analyzer.py  client.py  evaluator.py  manual_tests.py  prompts.py  repo_context.py  report_writer.py  test_generator.py  workflow_generator.py
docs/superpowers/plans/: 2026-07-02-qa-agent-implementation.md
docs/superpowers/specs/: 2026-07-02-qa-agent-design.md
examples/: caller-workflow.yml
frontend/: index.html
integrations/: clickup.py  conftest_template.py  discord.py  github_push.py  static_workflow.py
scripts/: run_ci_pipeline.py
storage/: fingerprints.py  models.py  mongo.py  runs.py
templates/: aria.yml
testing/: result_parser.py  runner.py
testing/suites/: conftest.py
testing/suites/accessibility/: test_axe.py
testing/suites/api/: test_auth.py  test_contracts.py
testing/suites/functional/: test_integration.py
tests/: test_clickup.py  test_context.py  test_diff.py  test_discord.py  test_evaluate.py  test_flows.py  test_llm.py  test_run_ci_pipeline.py  test_runner.py  test_testgen.py
webhook/: models.py  results.py  results_router.py  router.py  validator.py
(+7 files in other folders)
