[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria"
version = "1.1.0"
description = "Autonomous regression and intelligence QA automation agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [ { name = "ARIA QA Agent" } ]
keywords = ["qa", "automation", "regression", "playwright", "fastapi", "anthropic"]
urls = { "Homepage" = "https://github.com/RamaishaRehman/QA-Agent" }

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "anthropic==0.40.0",
    "playwright==1.49.1",
    "motor==3.6.0",
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
    "pyngrok==7.2.2",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
testing = [
    "pytest==8.3.4",
    "pytest-playwright==0.6.2",
    "axe-playwright-python==0.1.7",
    "pytest-json-report==1.5.0",
    "pytest-timeout==2.3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["claude", "integrations", "storage", "testing", "utils", "webhook"]

[tool.pytest.ini_options]
markers = [
    "ui: UI / browser (Playwright) tests",
    "api: API tests",
    "functional: functional and integration tests",
    "accessibility: accessibility (axe-core) tests",
    "load: load / performance tests",
]
